update to face matcher url

--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
                 <div class="field">
                     <label class="label">Face Matcher API URL</label>
                     <div class="control">
-                        <input id="sample1-url" class="input" type="text" placeholder="URL" value="https://u697b9z2k8.execute-api.us-east-1.amazonaws.com/latest/">
+                        <input id="sample1-url" class="input" type="text" placeholder="URL" value="">
                     </div>
                 </div>
 
